minor spacing fix for margin below media card

--- a/app/assets/stylesheets/archives.scss
+++ b/app/assets/stylesheets/archives.scss
@@ -4,6 +4,7 @@
 
 .archive {
   margin-right: 2em;
+  margin-bottom: 2em;
 }
 
 .archive-title {
